# BPM

./: .coverage  .gitignore  README.md  environment.yml  pixi.toml  pyproject.toml  requirements.txt  roadmaps.md  structure.md  todo.txt
.github/workflows/: ci.yml  deploy-docs.yml  docs.yml  publish.yml
bpm/: __init__.py
bpm/cli/: agent.py  main.py  project.py  resource.py  template.py  workflow.py
bpm/core/: agent_config.py  agent_methods.py  agent_provider.py  agent_recommend.py  agent_session.py  agent_template_index.py  brs_loader.py  context.py  descriptor_loader.py  env.py  hooks_runner.py  jinja_renderer.py  out_resolver.py  param_resolver.py  project_io.py  project_service.py  publish_resolver.py  store_registry.py  template_service.py  workflow_service.py
bpm/io/: exec.py  fs.py  yamlio.py
bpm/models/: hostpath.py  project.py  store_index.py
bpm/utils/: errors.py  interpolate.py  table.py  time.py
demo/250620_demultiplexing/: project.yaml  run.sh  samplesheet.csv
doc/: README.md  mkdocs.yml
doc/docs/: index.md
doc/docs/getting-started/: configuration.md  installation.md  quick-start.md
doc/docs/troubleshooting/: faq.md
doc/docs/user-guide/: cli-reference.md
docs/: _config.yml  changelog.md  contributing.md  getting-started.md  index.md  installation.md  troubleshooting.md
docs/brs/: anatomy.md  distribution-models.md  hooks-and-adapters.md  index.md  repo-metadata.md  resolvers-and-publish-keys.md  template-anatomy.md  testing-a-brs.md  workflow-anatomy.md
docs/cli/: bpm-agent.md  bpm-project.md  bpm-resource.md  bpm-template.md  bpm-workflow.md  index.md  overview.md
docs/concepts/: ctx-model.md  error-handling-and-diagnostics.md  index.md  interop-with-workflow-engines.md  naming-and-ids.md  parameters-and-precedence.md  path-resolution-rules.md  performance-and-caching.md  project-vs-ad-hoc.md  projects-and-paths.md  publishing-and-resolvers.md  reproducibility-and-environments.md  run-lifecycle-and-hooks.md  security-and-trust.md  state-and-versioning.md  stores-and-cache.md  templates-and-rendering.md  workflows-vs-templates.md
docs/how-to/: add-and-activate-a-brs.md  adopt-adhoc.md  create-a-project.md  hooks-and-resolvers.md  index.md  publish-template-outputs.md  render-a-template.md  render-and-run-a-template.md  render-and-run-a-workflow.md  troubleshoot-a-failure.md  use-ad-hoc-mode.md
docs/reference/: file-formats.md  index.md
scripts/: version_guard.py
src/: test.yaml
src/bpm/: __init__.py
src/bpm/cli/: __init__.py  generate.py  helper.py  info.py  init.py  main.py  repo.py  run.py  update.py  util.py
tests/: conftest.py  test_script.sh
tests/cli/: test_agent_config.py  test_agent_doctor.py  test_agent_history.py  test_agent_methods.py  test_agent_session_logging.py  test_agent_start_chat.py  test_agent_start_recommend.py  test_project_adopt.py  test_project_init.py  test_project_rm_template.py  test_project_status.py  test_resource_cli.py  test_template_info.py  test_template_publish.py  test_template_render.py  test_template_render_adhoc.py  test_template_render_adhoc_resolver.py  test_template_render_flags.py  test_template_run.py  test_template_run_publish_adhoc.py  test_version.py  test_workflow_info.py  test_workflow_run.py
tests/core/: test_config.py  test_context.py  test_project.py  test_project_model.py  test_template.py
tests/data/: project.yaml
tests/hook_functions/: helpers.py
tests/templates/: conftest.py  test_bclconvert.py
tests/unit/: test_agent_provider.py  test_brs_loader.py  test_context.py  test_descriptor_loader.py  test_descriptor_tools.py  test_exec.py  test_hooks_runner.py  test_hostpath.py  test_interpolate.py  test_models_project.py  test_param_exists_validation.py  test_param_resolver.py  test_publish_resolver.py  test_renderer.py  test_store_registry.py  test_table_utils.py  test_yamlio.py  test_yamlio_errors.py
(+48 files in other folders)
