[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bpm"
version = "0.0.0"
description = "Bioinformatics Project Manager (BPM) — core CLI (skeleton)"
authors = [{name = "Chao-Chung Kuo", email = "chao-chung.kuo@rwth-aachen.de"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=4.1",
  "typer>=0.12",
  "jinja2>=3.1",
  "pyyaml>=6.0",
  "rich>=13.7",
  "ruff>=0.5",
  "black>=24.8",
]

[tool.pytest.ini_options]
addopts = "--strict-markers --cov=bpm --cov-report=term-missing --verbose"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
extend-select = ["I"]  # import sorting
target-version = "py310"

[project.scripts]
bpm = "bpm.cli.main:app"